--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@commitlint/travis-cli": "^8.3.5",
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-url": "^4.0.2",
     "@testing-library/dom": "^6.12.2",
@@ -86,7 +87,6 @@
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.7",
-    "mqtt": "3.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "react": "16.12.0",
@@ -104,10 +104,12 @@
     "yup": "^0.28.1"
   },
   "peerDependencies": {
-    "mqtt": "3.0.0",
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0",
     "uuid": "^3.4.0",
     "yup": ">= 0.27.0"
+  },
+  "dependencies": {
+    "mqtt": "2.7.0"
   }
 }
