--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqtt-react-hooks",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "ReactJS library for Pub/Sub communication with an MQTT broker using Hooks",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -11,6 +11,19 @@
   "publishConfig": {
     "access": "public"
   },
+  "keywords": [
+    "mqtt",
+    "react",
+    "hooks",
+    "context",
+    "esp8266",
+    "esp32"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/victorHAS/mqtt-react-hooks.git"
+  },
+  "homepage": "https://github.com/victorHAS/mqtt-react-hooks#readme",
   "author": "VictorHAS",
   "license": "MIT",
   "scripts": {
@@ -87,7 +100,8 @@
     "yup": ">= 0.27.0"
   },
   "dependencies": {
-    "mqtt": "2.15.0"
+    "mqtt": "^3.0.0",
+    "mqtt-pattern": "^1.2.0"
   },
   "config": {
     "commitizen": {
