--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "src/**/*.{js,ts,tsx}": ["eslint --ext js,ts,tsx --fix", "git add"]
+  "lib/*.{js,ts,tsx}": ["eslint --ext js,ts,tsx --fix"]
 }
