--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "mqtt-react-hooks",
   "version": "1.2.0",
+  "private": true,
   "description": "ReactJS library for Pub/Sub communication with an MQTT broker using Hooks",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
-  "typings": "dist/index.d.ts",
+  "typings": "typings/index.d.ts",
+  "directories": {
+    "lib": "lib"
+  },
   "files": [
-    "dist"
+    "dist",
+    "typings"
   ],
   "publishConfig": {
     "access": "public"
@@ -27,12 +32,8 @@
   "author": "VictorHAS",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all -p dev:*",
-    "dev:example": "cd example && yarn start",
-    "dev:start": "rollup -c -w",
-    "prebuild": "rimraf dist",
-    "prepublish": "yarn build",
-    "build": "rollup -c",
+    "prebuild": "rimraf dist typings",
+    "build": "rollup -c ./rollup.config.js",
     "test": "jest",
     "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls"
   },
@@ -45,9 +46,10 @@
     "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-url": "^4.0.2",
-    "@testing-library/dom": "^6.12.2",
+    "@testing-library/dom": "6.12.2",
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "9.4.0",
+    "@testing-library/react-hooks": "^3.3.0",
     "@types/dot-object": "^1.7.0",
     "@types/jest": "^25.1.1",
     "@types/node": "^13.7.0",
@@ -62,7 +64,6 @@
     "commitizen": "^4.0.3",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "3.1.0",
-    "dot-object": "^2.1.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -75,11 +76,11 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^4.2.1",
-    "jest": "^25.1.0",
+    "jest": "25.1.0",
     "lint-staged": "^10.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
-    "react": "16.12.0",
+    "react": "^16.13.1",
     "react-dom": "16.12.0",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "16.12.0",
@@ -89,14 +90,13 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
-    "ts-jest": "^25.2.0",
+    "ts-jest": "25.2.0",
     "typescript": "^3.4.3",
     "yup": "^0.28.1"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0",
-    "uuid": "^3.4.0",
     "yup": ">= 0.27.0"
   },
   "dependencies": {
