--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "outDir": "build",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
@@ -9,7 +8,6 @@
     "allowJs": false,
     "jsx": "react",
     "declaration": true,
-    "declarationDir": "./dist",
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
@@ -21,8 +19,8 @@
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "importHelpers": true
+    "baseUrl": "."
   },
   "include": ["lib"],
-  "exclude": ["node_modules", "build", "dist", "example"]
+  "exclude": ["node_modules", "dist", "typings"]
 }
