--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "prebuild": "rimraf dist typings",
     "build": "rollup -c ./rollup.config.js",
-    "test": "jest",
+    "test": "jest --runInBand --detectOpenHandles",
     "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls"
   },
   "devDependencies": {
@@ -51,7 +51,7 @@
     "@testing-library/react": "9.4.0",
     "@testing-library/react-hooks": "^3.3.0",
     "@types/dot-object": "^1.7.0",
-    "@types/jest": "^25.1.1",
+    "@types/jest": "^26.0.0",
     "@types/node": "^13.7.0",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
@@ -76,7 +76,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^4.2.1",
-    "jest": "25.1.0",
+    "jest": "^26.0.1",
     "lint-staged": "^10.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
@@ -90,8 +90,9 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
-    "ts-jest": "25.2.0",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.4.3",
+    "weak-napi": "^2.0.2",
     "yup": "^0.28.1"
   },
   "peerDependencies": {
