--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqtt-react-hooks",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0",
   "private": false,
   "description": "ReactJS library for Pub/Sub communication with an MQTT broker using Hooks",
   "main": "dist/index.js",
