--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "module": "esnext",
-    "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "module": "ESNext",
+    "target": "ESNext",
+    "lib": ["es6", "dom", "es2016", "es2017", "ESNext"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
     "declaration": true,
     "declarationDir": "dist",
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
