--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,10 +24,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - name: Install Yarn
-        run: npm install -g yarn
-      - run: yarn
+          cache: 'yarn'
+      - run: yarn --frozen-lockfile
       - run: yarn test
 
   publish:
@@ -40,10 +38,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - name: Install Yarn
-        run: npm install -g yarn
-      - run: yarn
+          cache: 'yarn'
+      - run: yarn --frozen-lockfile
+      - run: yarn build
       - run: yarn semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
