--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "module": "ESNext",
-    "target": "ESNext",
-    "lib": ["es6", "dom", "es2016", "es2017", "ESNext"],
+    "module": "CommonJS",
+    "target": "ES2019",
+    "lib": ["es6", "dom", "ES2016", "ES2017", "ES2020", "ESNext"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
