--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "module": "CommonJS",
+    "module": "ES2015",
     "target": "ES2019",
     "lib": ["es6", "dom", "ES2016", "ES2017", "ES2020", "ESNext"],
     "sourceMap": true,
