--- a/package.json
+++ b/package.json
@@ -49,72 +49,73 @@
     "prebuild": "rimraf dist typings",
     "build": "rollup -c ./rollup.config.js",
     "test": "jest --runInBand --detectOpenHandles",
-    "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls"
+    "coveralls": "jest && cat ./__tests__/coverage/lcov.info | coveralls",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-url": "^4.0.2",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/npm": "^7.0.9",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@testing-library/dom": "6.12.2",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "9.4.0",
-    "@testing-library/react-hooks": "^3.3.0",
-    "@types/jest": "^26.0.0",
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/react-test-renderer": "^16.8.1",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "commitizen": "^4.0.3",
-    "coveralls": "^3.0.3",
-    "cz-conventional-changelog": "3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-import-helpers": "^1.0.2",
-    "eslint-plugin-jest": "^23.6.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "husky": "^4.2.1",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.0.7",
+    "@babel/core": "^7.17.10",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-url": "^7.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@testing-library/dom": "8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.32",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "commitizen": "^4.2.4",
+    "coveralls": "^3.1.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-jest": "^26.1.5",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.0",
+    "jest": "^28.1.0",
+    "lint-staged": "^12.4.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.0",
-    "react": "^16.13.1",
-    "react-dom": "16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-test-renderer": "16.12.0",
-    "rimraf": "^3.0.1",
-    "rollup": "^1.10.1",
+    "prettier": "^2.6.2",
+    "react": "^18.1.0",
+    "react-dom": "18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-test-renderer": "18.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.72.1",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "semantic-release": "^17.3.1",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.4.3"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "semantic-release": "^19.0.2",
+    "ts-jest": "^28.0.2",
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0"
+    "react": ">= 18.1.0",
+    "react-dom": ">= 18.1.0"
   },
   "dependencies": {
-    "mqtt": "^4.2.8",
+    "jest-environment-jsdom": "^28.1.0",
+    "mqtt": "4.3.7",
     "mqtt-pattern": "^1.2.0"
   },
   "config": {
