--- a/package.json
+++ b/package.json
@@ -115,8 +115,8 @@
     "react-dom": ">= 18.1.0"
   },
   "dependencies": {
-    "mqtt": "4.3.7",
-    "mqtt-pattern": "^1.2.0"
+    "mqtt-pattern": "^2.0.0",
+    "precompiled-mqtt": "^4.3.14-beta"
   },
   "config": {
     "commitizen": {
